--- a/android/build.gradle
+++ b/android/build.gradle
@@ -69,6 +69,7 @@ android {
 
 dependencies {
     implementation 'com.google.android.play:asset-delivery:2.2.2'
-    implementation 'org.apache.commons:commons-io:1.3.2'
     implementation "com.google.android.play:asset-delivery:2.2.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.3"
+    implementation 'com.google.android.play:asset-delivery-ktx:2.2.2'
 }
