set up flutter side

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: asset_delivery
-description: "A new Flutter plugin project."
+description: "A new Flutter plugin project for asset delivery."
 version: 0.0.1
 homepage:
 
