--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -6,17 +6,17 @@ plugins {
 }
 
 android {
-    namespace = "com.github.mohsen-motlagh.asset_delivery_example"
+    namespace = "com.github.mohsenmotlagh.asset_delivery_example"
     compileSdk = 34
     ndkVersion = flutter.ndkVersion
 
     compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_1_8
-        targetCompatibility = JavaVersion.VERSION_1_8
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
     }
 
     kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_1_8
+        jvmTarget = JavaVersion.VERSION_17
     }
 
     defaultConfig {
